force-app/main/default/objects/Permanency_Plan__c/fields/Federal_Fiscal_Year_Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>Federal_Fiscal_Year_Adoption_Date__c</fullName>
    <inlineHelpText>Federal Fiscal Year Adoption Assistance Agreement Sign Date</inlineHelpText>
    <label>Federal Fiscal Year Adoption Date</label>
    <type>Date</type>
</CustomField>