force-app/main/default/objects/Permanency_Plan__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>IF(ISPICKVAL(Contact__r.Gender__c, &quot;Male&quot;),&apos;Male&apos;,IF(ISPICKVAL(Contact__r.Gender__c, &quot;Female&quot;),&apos;Female&apos;,IF(ISPICKVAL(Contact__r.Gender__c, &quot;Invaild&quot;),&apos;Invaild&apos;,IF(ISPICKVAL(Contact__r.Gender__c, &quot;Transgender&quot;),&apos;Transgender&apos;,IF(ISPICKVAL(Contact__r.Gender__c, &quot;Missing&quot;),&apos;Missing&apos;,&apos;Other&apos;)))))</formula>
    <label>Gender</label>
    <type>Text</type>
</CustomField>