force-app/main/default/objects/Permanency_Plan__c/fields/Guardian_is_legally_responsible_child__c.field-meta.xml
<CustomField>
    <fullName>Guardian_is_legally_responsible_child__c</fullName>
    <inlineHelpText>Guardian is legally responsible for child?</inlineHelpText>
    <label>Guardian is legally responsible child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>