force-app/main/default/objects/Permanency_Plan__c/fields/Guardian_One_DOB__c.field-meta.xml
<CustomField>
    <fullName>Guardian_One_DOB__c</fullName>
    <label>Guardian One DOB</label>
    <type>Date</type>
</CustomField>