force-app/main/default/objects/Permanency_Plan__c/fields/Guardian_One_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_One_Name__c</fullName>
    <label>Guardian One Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>