force-app/main/default/objects/Permanency_Plan__c/fields/Guardian_One_SSN__c.field-meta.xml
<CustomField>
    <fullName>Guardian_One_SSN__c</fullName>
    <label>SSN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>