force-app/main/default/objects/Permanency_Plan__c/fields/Guardian_Two_DOB__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Two_DOB__c</fullName>
    <label>Guardian Two DOB</label>
    <type>Date</type>
</CustomField>