force-app/main/default/objects/Permanency_Plan__c/fields/Guardian_Two_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Two_Name__c</fullName>
    <label>Guardian Two Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>