force-app/main/default/objects/Permanency_Plan__c/fields/Guardianship_Assistance_can_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Guardianship_Assistance_can_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative caregiver(s) understand that the guardianship assistance can be suspended or terminated in accordance with COMAR 07.02.29.12 AND 07.02.29.13.</inlineHelpText>
    <label>Guardianship Assistance can Suspended</label>
    <type>Checkbox</type>
</CustomField>