force-app/main/default/objects/Permanency_Plan__c/fields/Guardianship_Planing__c.field-meta.xml
<CustomField>
    <fullName>Guardianship_Planing__c</fullName>
    <label>Guardianship Planing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>APPLICATION</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>DISCLOSURE CHECKLIST</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>AGREEMENT</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>ANNUAL REVIEWS</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>SUSPENSION</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>COMPLETED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>