force-app/main/default/objects/Permanency_Plan__c/fields/Has_a_Lifebook_been_prepared__c.field-meta.xml
<CustomField>
    <fullName>Has_a_Lifebook_been_prepared__c</fullName>
    <inlineHelpText>Has a Lifebook been prepared? If no, Explain?</inlineHelpText>
    <label>Has a Lifebook been prepared?</label>
    <type>TextArea</type>
</CustomField>