force-app/main/default/objects/Permanency_Plan__c/fields/Has_notification_been_sent_to_TCA__c.field-meta.xml
<CustomField>
    <fullName>Has_notification_been_sent_to_TCA__c</fullName>
    <label>Has notification been sent to TCA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>