force-app/main/default/objects/Permanency_Plan__c/fields/Has_the_child_been_in_care__c.field-meta.xml
<CustomField>
    <fullName>Has_the_child_been_in_care__c</fullName>
    <inlineHelpText>Has the child been in care 60 months or more?</inlineHelpText>
    <label>Has the child been in care?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>