force-app/main/default/objects/Permanency_Plan__c/fields/If_instead_child_being_adopted_comments__c.field-meta.xml
<CustomField>
    <fullName>If_instead_child_being_adopted_comments__c</fullName>
    <inlineHelpText>If instead the child is being adopted</inlineHelpText>
    <label>If instead child being adopted comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>