force-app/main/default/objects/Permanency_Plan__c/fields/If_instead_the_child_is_being_adopted_b__c.field-meta.xml
<CustomField>
    <fullName>If_instead_the_child_is_being_adopted_b__c</fullName>
    <inlineHelpText>If instead the child is being adopted by their foster parent and has significant emotional ties with that person</inlineHelpText>
    <label>If instead the child is being adopted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>