force-app/main/default/objects/Permanency_Plan__c/fields/If_the_Permanency_plan_is_to_return_home__c.field-meta.xml
<CustomField>
    <fullName>If_the_Permanency_plan_is_to_return_home__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Permanency plan is to return home or relative placement, is the placement in close proximity to the child&apos;s family?</inlineHelpText>
    <label>If the Permanency plan is to return home</label>
    <type>Checkbox</type>
</CustomField>