force-app/main/default/objects/Permanency_Plan__c/fields/Independent_means_of_financial_support__c.field-meta.xml
<CustomField>
    <fullName>Independent_means_of_financial_support__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) Understands that they must have an independent means of financial support for themselves and their family other than the guardianship assistance payment</inlineHelpText>
    <label>Independent means of financial support</label>
    <type>Checkbox</type>
</CustomField>