force-app/main/default/objects/Permanency_Plan__c/fields/Information_for_either_parent_is_unknown__c.field-meta.xml
<CustomField>
    <fullName>Information_for_either_parent_is_unknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information for either parent is unknown</label>
    <type>Checkbox</type>
</CustomField>