force-app/main/default/objects/Permanency_Plan__c/fields/Information_Name_Age__c.field-meta.xml
<CustomField>
    <fullName>Information_Name_Age__c</fullName>
    <inlineHelpText>Information (Name/Age...)</inlineHelpText>
    <label>Information (Name/Age...)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>