force-app/main/default/objects/Permanency_Plan__c/fields/Is_Child_receiving_TCA__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_receiving_TCA__c</fullName>
    <label>Is Child receiving TCA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>