force-app/main/default/objects/Permanency_Plan__c/fields/Is_the_child_a_sibling_to_a_child__c.field-meta.xml
<CustomField>
    <fullName>Is_the_child_a_sibling_to_a_child__c</fullName>
    <inlineHelpText>Is the child a sibling to a child who qualifies as an applicable child by age or length of care and is being placed in the same adoptive home ?</inlineHelpText>
    <label>Is the child a sibling to a child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>