force-app/main/default/objects/Permanency_Plan__c/fields/Is_the_child_currently_SSI_eligibile__c.field-meta.xml
<CustomField>
    <fullName>Is_the_child_currently_SSI_eligibile__c</fullName>
    <inlineHelpText>Is the child currently SSI eligibile?</inlineHelpText>
    <label>Is the child currently SSI eligibile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>