force-app/main/default/objects/Permanency_Plan__c/fields/Is_the_child_currently_Title_1V_E_foster__c.field-meta.xml
<CustomField>
    <fullName>Is_the_child_currently_Title_1V_E_foster__c</fullName>
    <inlineHelpText>Is the child currently Title 1V-E foster care eligibile?</inlineHelpText>
    <label>Is the child currently Title 1V-E foster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>