force-app/main/default/objects/Permanency_Plan__c/fields/Is_the_required_document_for_education__c.field-meta.xml
<CustomField>
    <fullName>Is_the_required_document_for_education__c</fullName>
    <inlineHelpText>Is the required document for education and/or healthcare provided?</inlineHelpText>
    <label>Is the required document for education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>