force-app/main/default/objects/Permanency_Plan__c/fields/Is_Willing_to_Provide_Safe_Stable_Home__c.field-meta.xml
<CustomField>
    <fullName>Is_Willing_to_Provide_Safe_Stable_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) is willing to provide safe and stable home that promotes the health, well-being and permanency for the child.</inlineHelpText>
    <label>Is Willing to Provide Safe &amp; Stable Home</label>
    <type>Checkbox</type>
</CustomField>