force-app/main/default/objects/Permanency_Plan__c/fields/known_out_of_home_placements__c.field-meta.xml
<CustomField>
    <fullName>known_out_of_home_placements__c</fullName>
    <inlineHelpText>Provided written information to the family pertaining to all known out-of-home placements</inlineHelpText>
    <label>known out-of-home placements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>