force-app/main/default/objects/Permanency_Plan__c/fields/LDSS_Director_Designee_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>LDSS_Director_Designee_Signature_Date__c</fullName>
    <inlineHelpText>LDSS Director/Designee Signature</inlineHelpText>
    <label>LDSS Director/Designee Signature Date</label>
    <type>DateTime</type>
</CustomField>