force-app/main/default/objects/Permanency_Plan__c/fields/Local_department__c.field-meta.xml
<CustomField>
    <fullName>Local_department__c</fullName>
    <label>Local department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>