force-app/main/default/objects/Permanency_Plan__c/fields/medical_or_disability_requirements__c.field-meta.xml
<CustomField>
    <fullName>medical_or_disability_requirements__c</fullName>
    <inlineHelpText>Does the child meet all medical or disability requirements?</inlineHelpText>
    <label>medical or disability requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>