force-app/main/default/objects/Permanency_Plan__c/fields/medication_history_of_the_child__c.field-meta.xml
<CustomField>
    <fullName>medication_history_of_the_child__c</fullName>
    <inlineHelpText>Provided written information to the family pertaining to know medication history of the child</inlineHelpText>
    <label>medication history of the child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>