force-app/main/default/objects/Permanency_Plan__c/fields/neglect_experiences_child_was_victim__c.field-meta.xml
<CustomField>
    <fullName>neglect_experiences_child_was_victim__c</fullName>
    <inlineHelpText>Provided written information to the family regarding any known neglect experiences in which child was the victim</inlineHelpText>
    <label>neglect experiences child was victim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>