force-app/main/default/objects/Permanency_Plan__c/fields/non_identifying_information_on_child__c.field-meta.xml
<CustomField>
    <fullName>non_identifying_information_on_child__c</fullName>
    <inlineHelpText>Provided the family with all available non identifying information on the birth of the child ( in writing)</inlineHelpText>
    <label>non identifying information on child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>