force-app/main/default/objects/Permanency_Plan__c/fields/Non_staff_member__c.field-meta.xml
<CustomField>
    <fullName>Non_staff_member__c</fullName>
    <label>Non staff member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>