force-app/main/default/objects/Permanency_Plan__c/fields/Notes_for_Emotional_ties__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Emotional_ties__c</fullName>
    <inlineHelpText>Notes</inlineHelpText>
    <label>Notes for Emotional ties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>