force-app/main/default/objects/Permanency_Plan__c/fields/Notes_for_narrative__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_narrative__c</fullName>
    <inlineHelpText>BIO-PSYCHO-SOCIO-CULTURAL HISTORY FOR CHILD PRESENTATION AND DISCLOSURE</inlineHelpText>
    <label>Notes for narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>