force-app/main/default/objects/Permanency_Plan__c/fields/Number_of_siblings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_siblings__c</fullName>
    <inlineHelpText>Number of siblings</inlineHelpText>
    <label>Number of siblings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>