force-app/main/default/objects/Permanency_Plan__c/fields/Offer_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Accepted_Date__c</fullName>
    <inlineHelpText>Offer Accepted Date</inlineHelpText>
    <label>Offer Accepted Date</label>
    <type>Date</type>
</CustomField>