force-app/main/default/objects/Permanency_Plan__c/fields/One_of_following_special_needs_factors__c.field-meta.xml
<CustomField>
    <fullName>One_of_following_special_needs_factors__c</fullName>
    <inlineHelpText>One of the following special needs factors</inlineHelpText>
    <label>One of following special needs factors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1) Child 6-17 Years of Age</fullName>
            </value>
            <value>
                <fullName>2)Physical, Mental Or Emotional Disability Or Disease ( Documentation Required)</fullName>
            </value>
            <value>
                <fullName>3) Emotional Disturbance ( Documentation Required)</fullName>
            </value>
            <value>
                <fullName>4) Membership in Sibling Group - List Sibling in Care Eligible For Adoption in Same Adoptive Placement</fullName>
            </value>
            <value>
                <fullName>5) Recognized High Risk of Physical or Mental Disability or Disease ( Explanation Must Be Documented In Case Record)</fullName>
            </value>
            <value>
                <fullName>6) Race Or Ethnicity - Can Only Be In Combination with One of the Above Factors ( 1-5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>