force-app/main/default/objects/Permanency_Plan__c/fields/Permanency_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Permanency_Plan_Status__c</fullName>
    <label>Permanency Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>