force-app/main/default/objects/Permanency_Plan__c/fields/Permanency_Proceed_Status__c.field-meta.xml
<CustomField>
    <fullName>Permanency_Proceed_Status__c</fullName>
    <label>Permanency Proceed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>