force-app/main/default/objects/Permanency_Plan__c/fields/Person_s_information_Disclosed_To__c.field-meta.xml
<CustomField>
    <fullName>Person_s_information_Disclosed_To__c</fullName>
    <inlineHelpText>Person(s) information Disclosed To</inlineHelpText>
    <label>Person(s) information Disclosed To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>