force-app/main/default/objects/Permanency_Plan__c/fields/Petition_for_TPR_sent_to_court__c.field-meta.xml
<CustomField>
    <fullName>Petition_for_TPR_sent_to_court__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Petition for TPR sent to court</label>
    <type>Checkbox</type>
</CustomField>