force-app/main/default/objects/Permanency_Plan__c/fields/physical_abuse_experiences_child_victim__c.field-meta.xml
<CustomField>
    <fullName>physical_abuse_experiences_child_victim__c</fullName>
    <inlineHelpText>Provide written information to the family regarding any known physical abuse experiences in which the child was the victim</inlineHelpText>
    <label>physical abuse experiences child victim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>