force-app/main/default/objects/Permanency_Plan__c/fields/physical_abuse_perpetrated_by_the_child__c.field-meta.xml
<CustomField>
    <fullName>physical_abuse_perpetrated_by_the_child__c</fullName>
    <inlineHelpText>Provided written information to the family regarding any known physical abuse perpetrated by the child on others</inlineHelpText>
    <label>physical abuse perpetrated by the child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>