force-app/main/default/objects/Permanency_Plan__c/fields/physical_mental_hospitalization_child__c.field-meta.xml
<CustomField>
    <fullName>physical_mental_hospitalization_child__c</fullName>
    <inlineHelpText>Provided written information to the family pertaining to physical health, mental health and hospitalization history of the child</inlineHelpText>
    <label>physical,mental,hospitalization child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>