force-app/main/default/objects/Permanency_Plan__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Permanency Plans</relationshipLabel>
    <relationshipName>Permanency_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>