force-app/main/default/objects/Permanency_Plan__c/fields/Previous_Adoptive_Parent_s_Death_date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Adoptive_Parent_s_Death_date__c</fullName>
    <inlineHelpText>Previous Adoptive Parent(s) Death date (if dead)</inlineHelpText>
    <label>Previous Adoptive Parent(s) Death date</label>
    <type>Date</type>
</CustomField>