force-app/main/default/objects/Permanency_Plan__c/fields/Previous_Adoptive_Parent_s_TPR__c.field-meta.xml
<CustomField>
    <fullName>Previous_Adoptive_Parent_s_TPR__c</fullName>
    <inlineHelpText>Previous Adoptive Parent(s) TPR (if terminated)</inlineHelpText>
    <label>Previous Adoptive Parent(s) TPR</label>
    <type>Date</type>
</CustomField>