force-app/main/default/objects/Permanency_Plan__c/fields/Primary_Guardian_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Primary_Guardian_Relationship__c</fullName>
    <label>Primary Guardian Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoptive Child</fullName>
            </value>
            <value>
                <fullName>Adoptive Father</fullName>
            </value>
            <value>
                <fullName>Adoptive Monther</fullName>
            </value>
            <value>
                <fullName>Biological Brother</fullName>
            </value>
            <value>
                <fullName>Biological Child</fullName>
            </value>
            <value>
                <fullName>Biological Father</fullName>
            </value>
            <value>
                <fullName>Biological Sister</fullName>
            </value>
            <value>
                <fullName>Boyfriend</fullName>
            </value>
            <value>
                <fullName>Boyfriend-Ex</fullName>
            </value>
            <value>
                <fullName>Brother-in-Law</fullName>
            </value>
            <value>
                <fullName>Child Care Center employee</fullName>
            </value>
            <value>
                <fullName>Child Care Home Provider</fullName>
            </value>
            <value>
                <fullName>Child Care Worker</fullName>
            </value>
            <value>
                <fullName>Child Therapeutic Foster</fullName>
            </value>
            <value>
                <fullName>Co-Worker</fullName>
            </value>
            <value>
                <fullName>Custodian(Legal)</fullName>
            </value>
            <value>
                <fullName>Daughter in Law</fullName>
            </value>
            <value>
                <fullName>Daycare child</fullName>
            </value>
            <value>
                <fullName>Father-In-Law</fullName>
            </value>
            <value>
                <fullName>Father therapeutic Foster</fullName>
            </value>
            <value>
                <fullName>Foster Child</fullName>
            </value>
            <value>
                <fullName>Foster Father</fullName>
            </value>
            <value>
                <fullName>Foster Mother</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Girlfriend</fullName>
            </value>
            <value>
                <fullName>Girlfriend-Ex</fullName>
            </value>
            <value>
                <fullName>GodFather</fullName>
            </value>
            <value>
                <fullName>GodMother</fullName>
            </value>
            <value>
                <fullName>Guardian(Legal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>