force-app/main/default/objects/Permanency_Plan__c/fields/Primary_Permanacy_Plan_is_adoption__c.field-meta.xml
<CustomField>
    <fullName>Primary_Permanacy_Plan_is_adoption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Permanacy Plan is adoption</label>
    <type>Checkbox</type>
</CustomField>