force-app/main/default/objects/Permanency_Plan__c/fields/Primary_Permanency_Plan__c.field-meta.xml
<CustomField>
    <fullName>Primary_Permanency_Plan__c</fullName>
    <label>Primary Permanency Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption by a non-relative</fullName>
                <default>true</default>
                <label>Adoption by a non-relative</label>
            </value>
            <value>
                <fullName>Adoption by a relative</fullName>
            </value>
            <value>
                <fullName>APPLA</fullName>
            </value>
            <value>
                <fullName>Guardianship by a non-relative</fullName>
            </value>
            <value>
                <fullName>Guardianship by a relative</fullName>
            </value>
            <value>
                <fullName>Reunification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>