force-app/main/default/objects/Permanency_Plan__c/fields/Prospective_adoptive_family_committed__c.field-meta.xml
<CustomField>
    <fullName>Prospective_adoptive_family_committed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prospective adoptive family is deeply committed to the child</inlineHelpText>
    <label>Prospective adoptive family committed</label>
    <type>Checkbox</type>
</CustomField>